feat: integrate React with Electron and Vite

--- a/index.html
+++ b/index.html
@@ -8,11 +8,8 @@
 </head>
 
 <body>
-  <h1>💖 Hello World!</h1>
-  <p>Welcome to your Electron application.</p>
-  <p>👋</p>
-  <p id="info"></p>
-  <script type="module" src="/src/renderer.ts"></script>
+  <div id="root" />
+  <script type="module" src="/src/renderer.tsx"></script>
 </body>
 
 </html>
