--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
   <div id="root" />
-  <script type="module" src="/src/renderer.tsx"></script>
+  <script type="module" src="./src/renderer/renderer.tsx"></script>
 </body>
 
 </html>
