--- a/index.html
+++ b/index.html
@@ -4,12 +4,11 @@
 <head>
   <meta charset="UTF-8" />
   <title>Hello World!</title>
-  <link href="/src/style.css" rel="stylesheet">
 </head>
 
 <body>
   <div id="root" />
-  <script type="module" src="./src/renderer/renderer.tsx"></script>
+  <script type="module" src="./src/app/renderer/renderer.tsx"></script>
 </body>
 
 </html>
