--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       http-equiv="Content-Security-Policy"
       content="default-src 'self'; img-src 'self' data:; style-src 'self' 'unsafe-inline'; script-src 'self'; connect-src 'self' ws:;"
     />
-    <title>Hello World!</title>
+    <title>Electrical Simulations Plotter</title>
   </head>
 
   <body>
